[package]
name = "velox-cli"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive", "env"] }
fdlimit = "0.3.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "local-time"] }
velox = { path = "../velox", default-features = false, features = ["clap"] }

tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = ["aws-lc-rs"]
jemalloc = ["dep:tikv-jemallocator"]
aws-lc-rs = ["velox/aws-lc-rs"]
ring = ["velox/ring"]
quic = ["velox/quic"]
aws-lc-rs-bindgen = ["velox/aws-lc-rs-bindgen"]

[[bin]]
name = "velox"
path = "src/main.rs"
